--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 }
 
 .App-logo {
-  height: 40vmin;
+  height: 8vmin;
   pointer-events: none;
 }
 
@@ -15,11 +15,11 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  height: 50%;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
-  justify-content: center;
+  justify-content: space-around;
   font-size: calc(10px + 2vmin);
   color: white;
 }
@@ -35,4 +35,15 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.Container {
+  border: thick double #32a1ce;
+  margin: 4%;
+}
+
+.Container > * {
+  border-bottom: 2px solid #32a1ce;
+  margin: 4%;
+  padding-bottom: 4%
 }
